--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "razorpay": "^2.9.6",
+    "resend": "^6.6.0",
     "stripe": "^17.7.0",
     "validator": "^13.15.23"
   }
